k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpul-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpul-app
  template:
    metadata:
      labels:
        app: simpul-app
    spec:
      containers:
        - name: simpul-app
          image: gcr.io/simpul-app-backend/simpul_app:latest
          ports:
            - containerPort: 80
