k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpul-service
spec:
  selector:
    app: simpul-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
