k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpul-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: api.simpul-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simpul-service
                port:
                  number: 80
